--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -1,2 +1,109 @@
-h1
-	color blue
+@import "normalize.styl"
+@import "fonts.styl"
+
+gris_oscuro = #333333
+gris_claro = #818181
+
+a
+	text-decoration none
+	
+img
+	vertical-align top
+body
+	font-size 16px
+	font-family 'Varela Round', sans-serif
+figure
+	margin 0
+// buttons
+.button-menu
+	left .5em
+	margin-top -10px
+	position absolute
+	top 50%
+	color gris_oscuro
+	&:hover
+		color gris_claro
+.container
+	font-size 0
+	padding 1.4rem
+	text-align center
+.actions
+	position absolute
+	bottom 0
+	left 0
+	right 0
+	background rgba(black, .3)
+.action
+	font-size 1.2em
+	color white
+	margin-right .5em
+	&:last-child
+		margin-right 0
+.rigth-text
+	text-align right
+.padding
+	padding 1em
+.border-bottom
+	border-bottom 1px solid gris_claro 
+.name
+	color gris_oscuro
+.menu
+	display none
+.relative
+	position relative
+.author
+	color gris_claro
+
+.center-block
+	margin 0 auto
+
+.center-text
+	text-align center	
+.header
+	height 3.5em
+	position relative
+	// 	display none
+	// a
+	.title
+		font-size 1.1em
+		line-height 3.5em	
+		margin 0
+		text-align center
+.song
+	width 8rem
+	display inline-block
+	font-size 1rem
+	margin-right 1em
+	margin-bottom 1em
+	text-align left
+	&:nth-child(even)
+		margin-right 0
+	p
+		margin 0.5em 0
+
+.playing
+	&.small
+		width 20em
+		
+		
+.progress
+	margin 1em 0
+	.total
+		height 5px
+		background gris_claro
+		width 100%
+		border-radius 5px
+	.state
+		height 5px
+		background red
+		width 30%
+		border-radius 5px
+		position relative
+	.circle
+		height 10px
+		width 10px
+		background gris_oscuro
+		border-radius 50%
+		position absolute
+		right 0	
+		margin-top -2.5px
